fix: Correcciones en la recuperación de contraseña

--- a/src/app/pages/auth/modals/recover-password/recover-password.page.html
+++ b/src/app/pages/auth/modals/recover-password/recover-password.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Restablecer Contraseña</ion-title>
     <ion-buttons slot="end">
-      <ion-button onclick="dismissModal()">Cerrar</ion-button>
+      <ion-button (click)="dismissModal()">Cerrar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
