fix: edición del listado en general

--- a/src/app/pages/social/new-session/new-session.page.html
+++ b/src/app/pages/social/new-session/new-session.page.html
@@ -66,7 +66,9 @@
       <p>Día: {{schedule.day}}</p>
       <p>Hora de inicio: {{schedule.hour_start}}</p>
       <p>Hora de Finalización: {{schedule.hour_end}}</p>
-      <ion-button *ngIf="session.state == 'Aceptado'">Unirse a la reunión</ion-button>
+      <div *ngIf="session.state == 'Aceptado'">
+        <app-zoom-meeting meetingType="user" meetingNumber="coach.zoomIdMeeting" meetingPassword="coach.zoomPasswordMeeting" displayName="login.name"></app-zoom-meeting>
+      </div>
     </ion-card>
   </div>
 
