--- a/src/app/pages/auth/my-profile/my-profile.page.html
+++ b/src/app/pages/auth/my-profile/my-profile.page.html
@@ -35,11 +35,11 @@
           </ion-col>
         </ion-row>
 
-        <ion-row>
+        <!-- <ion-row>
           <ion-col>
             <ion-button>Ver mis Estados</ion-button>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
       </ion-grid>
 
     </ion-card-content>
