--- a/src/app/pages/auth/home/home.page.html
+++ b/src/app/pages/auth/home/home.page.html
@@ -10,7 +10,7 @@
     <ion-grid>
       <ion-row>
         <ion-col class="ion-align-items-center ion-text-center">
-          <h1>¡Bienvenido, !</h1>
+          <h1>¡Bienvenido!</h1>
         </ion-col>
       </ion-row>
       <ion-row>
