--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,32 +2,39 @@
 
   <ion-tab-bar slot="bottom" *ngIf="!isAdmin && !loading">
 
-    <ion-tab-button tab="subscription-update" *ngIf="isUser">
-      <ion-icon name="diamond"></ion-icon>
-      <ion-label>Subscripción</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="subscription-update" *ngIf="isUser">
+        <ion-icon name="diamond"></ion-icon>
+        <ion-label>Subscripción</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="session-user" *ngIf="isUser">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Sesiones</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="session-user" *ngIf="isUser">
+        <ion-icon name="calendar"></ion-icon>
+        <ion-label>Sesiones</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="home" selected>
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Inicio</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="home" selected>
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="session-coach" *ngIf="isCoach">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Sesiones</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="session-coach" *ngIf="isCoach">
+        <ion-icon name="calendar"></ion-icon>
+        <ion-label>Sesiones</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="music">
-      <ion-icon name="musical-notes"></ion-icon>
-      <ion-label>Genius</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="music">
+        <ion-icon name="musical-notes"></ion-icon>
+        <ion-label>Genius</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="settings">
+      <ion-tab-button tab="settings">
+        <ion-icon name="cog"></ion-icon>
+        <ion-label>Ajustes</ion-label>
+      </ion-tab-button>
+  </ion-tab-bar>
+
+  <ion-tab-bar slot="bottom" *ngIf="isAdmin && !loading">
+    <ion-tab-button tab="settings" *ngIf="isAdmin">
       <ion-icon name="cog"></ion-icon>
       <ion-label>Ajustes</ion-label>
     </ion-tab-button>
